# tauricon

./: .eslintrc.js  .gitignore  CHANGELOG.md  Cargo.toml  README.md  jest.config.js  package.json  project.json  rollup.config.js
.changes/: config.json  fix-icns.md  fix-ico.md  include-json.md  initial-release.md  readme.md
.github/: CONTRIBUTING.md
.github/workflows/: audit.yml  covector-version-or-publish.yml  format.yml  lint.yml  test.yml
src/: args.rs  configs.rs  icons.rs  lib.rs  macros.rs  main.rs  tauricon.ts
src-tauri/icons/: icon.icns
src/helpers/: app-paths.ts  logger.ts  tauricon.config.ts
src/types/: modules.d.ts
test/jest/: jest.setup.js
test/jest/__tests__/: tauricon.spec.js
test/jest/fixtures/: app-test-setup.js
test/jest/fixtures/app/: index.js
test/jest/fixtures/app/src-tauri/icons/: icon.icns
